Fix upper-third to align to slide top

--- a/css/source/custom/layouts.scss
+++ b/css/source/custom/layouts.scss
@@ -22,7 +22,7 @@ body.reveal-ready {
 	justify-content: flex-start !important;
 	align-items: center; /* or 'flex-start' if you want left alignment */
 	height: 100%;
-	padding-top: 2em; /* adjust as needed */
+	// padding-top: 2em; /* adjust as needed */
   }
 
   section[data-lower-third] {
